--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-<div>Insert Organiser Title in the box below</div>    
+<div>Input Organiser Title in the box below</div>    
 
 <div class="row" id ="th">
     <div class="col">
